# talk2doc

./: .cta.json  .gitignore  README.md  package.json
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .gitignore  CLOUDFLARE_CONTAINERS.md  Dockerfile  document_processor.py  main.py  plan.md  pyproject.toml  test_classification.py  test_datasets.py  test_memory.py  test_visualization.py  wrangler.containers.jsonc
backend/agents/: __init__.py  base_agent.py  data_scientist_agent.py  router_agent.py  synthesizer_agent.py
backend/cloudflare/: container-worker.js
backend/core/: config.py
backend/database/: database.py  models.py
backend/routers/: chat.py  conversations.py  datasets.py  documents.py  knowledge_graph.py  memory.py  models.py
backend/services/: agent_executor.py  data_profiling_service.py  data_service.py  document_service.py  embedding_service.py  knowledge_graph_service.py  ml_service.py  nlp_service.py  rag_service.py  storage.py  vector_store.py  visualization_service.py
backend/services/memory/: __init__.py  graph_memory.py  long_term_memory.py  memory_manager.py  semantic_memory.py  short_term_memory.py
backend/tests/: run.py  test_clustering.py  test_data_scientist_agent.py  test_db.py  test_graph_memory.py  test_memory.py  test_nlp.py  test_synthesizer.py  test_workflow_guards.py
backend/uploads/datasets/: bfb057f3-c20c-4c5b-9eba-0f253dc46e9c.csv
backend/workflows/: __init__.py  agent_workflow.py  state.py
src/: routeTree.gen.ts
src/components/: Header.tsx
src/routes/: index.tsx
